[add] MAC support; compiled successfully

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,24 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+
+# fyu
+.vscode
+.ctags_updated
+dsdgen
+dsqgen
+*.bak
+tags
+
+# generated files
+tools/checksum
+tools/columns.h
+tools/distcomp
+tools/makefile_mac
+tools/mkheader
+tools/streams.h
+tools/tables.h
+tools/tpcds.idx
+tools/tpcds.idx.h
+tools/y.output
